// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkflowCountCard component Snapshot with workflowCount 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiCard-root makeStyles-card-47 MuiPaper-rounded"
>
  <div
    className="MuiCardContent-root"
  >
    <div
      className="makeStyles-contentDiv-49"
    >
      <div>
        <div
          className="MuiBox-root MuiBox-root-91"
        >
          Total Workflows
        </div>
        <div
          className="MuiBox-root MuiBox-root-92"
        >
          10
        </div>
      </div>
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root makeStyles-cardIcon-46"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`WorkflowCountCard component Snapshot without workflowCount 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiCard-root makeStyles-card-47 MuiPaper-rounded"
>
  <div
    className="MuiCardContent-root"
  >
    <div
      className="makeStyles-contentDiv-49"
    >
      <div>
        <div
          className="MuiBox-root MuiBox-root-80"
        >
          Total Workflows
        </div>
        <div
          className="MuiBox-root MuiBox-root-81"
        >
          --
        </div>
      </div>
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root makeStyles-cardIcon-46"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z"
        />
      </svg>
    </div>
  </div>
</div>
`;
